--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
+boto3==1.34.144
+botocore==1.34.144
 certifi==2024.7.4
 charset-normalizer==3.3.2
 idna==3.7
+jmespath==1.0.1
 numpy==2.0.0
 pandas==2.2.2
 praw==7.7.1
@@ -8,6 +11,7 @@ prawcore==2.4.0
 python-dateutil==2.9.0.post0
 pytz==2024.1
 requests==2.32.3
+s3transfer==0.10.2
 six==1.16.0
 tzdata==2024.1
 update-checker==0.18.0
